--- a/home.css
+++ b/home.css
@@ -1,117 +1,125 @@
+/* Base styles (mobile-first) */
 body {
     background-color: white;
-
-
+    margin: 0;
+    font-family: Arial, sans-serif;
 }
 
 h1 {
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    text-align: left;
-    font-size: 4em;
+    font-size: 2em;
     text-decoration: underline;
     text-decoration-color: black;
-}
-
-#abt {
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 3em;
     text-align: center;
 }
 
-#about {
-    width: 1400px;
-    background-color: white;
-    margin-left: 188px;
-    padding-left: 40px;
-    padding-right: 40px;
-    border-width: 10px;
+#abt {
+    font-size: 1.2em;
+    text-align: center;
+    padding: 0 10px;
+}
 
-    box-shadow: 5px 5px 5px 5px #adb5bd;
+#about {
+    max-width: 90%;
+    margin: 20px auto;
+    padding: 20px;
+    box-shadow: 0 4px 8px #adb5bd;
+    background-color: white;
 }
 
 #heading2 {
     background-color: black;
-    width: 1890px;
-    height: 100px;
-    text-shadow: 10px #edede9;
+    padding: 20px 0;
+    text-align: center;
 }
 
 #heading3 {
     color: white;
-    text-align: center;
-    font-size: 3em;
-    letter-spacing: 4px;
-    padding-top: 20px;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 2em;
+    letter-spacing: 2px;
 }
 
 #download {
-    margin-left: 500px;
-    width: 800px;
-    height: 300px;
-    box-shadow: 5px 5px 5px 5px #adb5bd;
+    max-width: 90%;
+    margin: 40px auto;
+    padding: 20px;
     background-color: #495057;
-    border-radius: 30px;
-}
-
-#download1 {
-    font-family: 'Times New Roman', Times, serif;
-    font-size: 3em;
-    color: #7678ed;
-    letter-spacing: 3px;
-    font-weight: 400;
+    box-shadow: 0 4px 8px #adb5bd;
+    border-radius: 20px;
     text-align: center;
 }
 
-span {
-    color: white;
-    font-family: Arial, Helvetica, sans-serif;
-
-    letter-spacing: 3px;
-    font-weight: 400;
+#download1 {
+    font-size: 1.5em;
+    color: #7678ed;
 }
 
 #pdf {
-    display: block;
-    padding-top: 70px;
+    display: inline-block;
     background-color: #00a6fb;
+    color: white;
+    padding: 10px 20px;
+    margin-top: 20px;
     text-decoration: none;
-    margin-left: 220px;
-    margin-right: 220px;
-    padding-bottom: 10px;
-    padding-top: 10px;
-    border-radius: 30px;
-    margin-top: 40px;
-
-
+    border-radius: 20px;
+    transition: background-color 0.3s;
 }
 
 #pdf:hover {
     background-color: #9ef01a;
-    color: white;
 }
 
 #footer {
-    height: 100px;
-    width: 100%;
-    background-color: #333333;
+    background-color: #333;
+    color: white;
+    text-align: center;
+    padding: 20px;
     margin-top: 40px;
 }
 
-body {
-    margin: 0%;
-}
-
 #video {
-    margin-left: 300px;
-    height: 400px;
-    width: 1300px;
+    width: 100%;
+    height: auto;
+    display: block;
+    margin: 20px auto;
 }
 
 #span1 {
-    font-family: sans-serif;
-    letter-spacing: 6px;
+    font-weight: 600;
     background-color: #edede9;
     color: black;
-    font-weight: 600;
+    padding: 2px 5px;
+}
+
+/* Tablet and up */
+@media screen and (min-width: 768px) {
+    h1 {
+        font-size: 3em;
+    }
+
+    #abt {
+        font-size: 2em;
+    }
+
+    #download1 {
+        font-size: 2em;
+    }
+
+    #heading3 {
+        font-size: 2.5em;
+    }
+}
+
+/* Desktop and up */
+@media screen and (min-width: 1024px) {
+    #about {
+        max-width: 1200px;
+    }
+
+    #download {
+        max-width: 800px;
+    }
+
+    #video {
+        width: 80%;
+    }
 }
